---------

2005.xx.xx | Azureus 2.3.0.5

FEATURE: Core | Built in tracker support for multiple listen ports [Parg]
FEATURE: Core | Tracker support for multi-hash scrapes [Parg]
FEATURE: Core | "Date added" field added for hosted torrents [Parg]
FEATURE: Core | Alternate max upload rate limit when only seeding option [Nolar]
FEATURE: Plug | Magnet URI accessor method added to Torrent [Parg]

BUGFIX: Core  | Fix interested flag being set sometimes when seeding [Nolar]
BUGFIX: Core  | Wrong file name returned for stopped simple torrents [Parg]
BUGFIX: Core  | Seeder/leecher counts missing for published torrents [Parg]
BUGFIX: Core  | Stats going negative for hosted torrent average up/down [Parg]
BUGFIX: Core  | Fix piece request ignore bug [Nolar]
BUGFIX: UI    | Create-torrent wizard fix for multi-torrent checkbox enabling error [Parg]




2005.06.27 | Azureus 2.3.0.4

FEATURE: Core | DHT torrent lookup now based on sha1(hash) and torrent xfer encrypted using hash-derived key [Parg]
FEATURE: Core | More aggressive banning of peers sending bad data - algorithm change and block-banning feature [Gudy,Parg]
FEATURE: Core | Support for multiple DHT networks on same port [Parg]
FEATURE: Core | Introduced "passive torrents" - these are tracked but not downloaded [Parg]
FEATURE: Core | Category setting functions added to "My Tracker" [Parg]
FEATURE: Core | Added ability to make plugin config ui components invisible [Parg]
FEATURE: UI   | Average peer speed for swarm column added [Nolar]
FEATURE: Plug | Plugin interface extension to allow per-plugin torrent-attributes [Parg]
FEATURE: Plug | Plugin ResourceDownload feature for accessing content-type [Parg]

CHANGE: Core  | Improved optimistic unchoke anti-leech algorithms [Nolar]
CHANGE: Core  | CVS versions run multiple DHTs to permit validations of changes [Parg]
CHANGE: Core  | DHT anti-spoof for cache forwards [Parg]
CHANGE: Core  | DHT mechanisms for flood prevention [Parg]